--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,18 @@
   white-space: pre-wrap;
 }
 
+.details-container {
+  background-size: contain;
+  background-repeat:no-repeat;
+  background-position: center;
+  width: 100%;
+  /* height: 100%; */
+  /* height: 70vh;  */
+  position: absolute;
+  /* z-index: -1; */
+  /* §c*/
+}
+
 /*  #######################*/
 
 /* chat glass: */
